# scratchPad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/interpol/src/: CMakeLists.txt
applications/interpol/src/interpol/: main.cpp
applications/interpol/src/interpol/gil/: bounded_subview.hpp
applications/interpol/src/interpol/rescale/: rescale.hpp
applications/interpol/src/interpol/wiggleKeypoints/: updateKeypoints.cpp  updateKeypoints.hpp
applications/modelTester/: CMakeLists.txt
applications/modelTester/src/: CMakeLists.txt
applications/modelTester/src/modelTester/: main.cpp
cmake-modules/: UseBoost.cmake
libraries/: CMakeLists.txt
